# Prog4Engine

./: CMakeLists.txt  README.md
.github/workflows/: emscripten.yml
Data/: Levels.json  Scores.json
Data/Maps/: Level_one.txt
Minigin/: CollisionManager.cpp  CollisionManager.h  Command.cpp  Command.h  Commands.cpp  Commands.h  Component.cpp  Component.h  Controller.cpp  Controller.h  DebugDraw.cpp  DebugDraw.h  Draw.cpp  Draw.h  Event.cpp  Event.h  EventQueue.cpp  EventQueue.h  FPSComponent.cpp  FPSComponent.h  GameObject.cpp  GameObject.h  GraphComponent.cpp  GraphComponent.h  HealthComponent.cpp  HealthComponent.h  HealthComponentUI.cpp  HealthComponentUI.h  Hitbox.cpp  Hitbox.h  IEventHandler.h  IObserver.h  InputData.cpp  InputData.h  InputManager.cpp  InputManager.h  Main.cpp  Minigin.cpp  Minigin.h  MoveComponent.cpp  (+36 more)
PacMan/: AutoKill.cpp  AutoKill.h  ButtonAnimator.h  ButtonComponent.cpp  ButtonComponent.h  CollisionHandler.h  Commands.cpp  Commands.h  CountdownComponent.cpp  CountdownComponent.h  EatenComponent.cpp  EatenComponent.h  Events.cpp  Events.h  FPSComponent.cpp  FPSComponent.h  FruitComponent.cpp  FruitComponent.h  FruitSpawner.cpp  FruitSpawner.h  GameState.cpp  GameState.h  GamestateManager.cpp  GamestateManager.h  Ghost.cpp  Ghost.h  GhostComponent.cpp  GhostComponent.h  GhostState.cpp  GhostState.h  Graph.cpp  Graph.h  HealthComponent.cpp  HealthComponent.h  HealthComponentUI.cpp  HealthComponentUI.h  HighscoreParser.cpp  HighscoreParser.h  IndicatorSpawnComponent.cpp  IndicatorSpawnComponent.h  (+30 more)
web/: index.html
